# scene

./: .dockerignore  .editorconfig  .gitignore  .prettierignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  THIRD_PARTY_NOTICES.md  install-hooks.sh  justfile  package.json
.claude/skills/scene-design/: SKILL.md
.githooks/: pre-commit
.github/: dependabot.yml
.github/workflows/: automerge.yaml  ci.yaml  cve-scan.yaml  dockerimage.yaml  libopenmpt-ext.yml  pages.yaml  puae-core-jit-m3.yml  puae-core-jit-m4.yml  puae-core-jit.yml  puae-core.yml
apps/party/: AMIGA-ROMS.md  CREDITS.md
apps/party/backend/: .env.example  Cargo.toml
apps/party/backend/src/: auth.rs  config.rs  cp437.rs  db.rs  error.rs  lib.rs  main.rs  party.rs  results.rs  routes.rs  scan.rs  state.rs  transcoder.rs
apps/party/frontend/: eslint.config.js  package.json  playwright.config.ts  svelte.config.js  vite.config.ts
apps/party/frontend/e2e/: playback.spec.ts
apps/party/frontend/src/: app.d.ts  app.html  fontsource.d.ts
apps/party/frontend/src/lib/: EjsEmulator.svelte  Emulator.svelte  FileBrowser.svelte  ImageCanvas.svelte  MusicPlayer.svelte  NfoView.svelte  PartyBackground.svelte  Settings.svelte  amigaRoms.ts  api.ts  autohideControls.ts  listkeys.ts  player-host.ts
apps/party/frontend/src/lib/__tests__/: amigaRoms.test.ts
apps/party/frontend/src/routes/: +layout.svelte  +page.svelte
apps/party/frontend/src/routes/[slug]/: +page.svelte
apps/party/frontend/static/: amiga-rom-sw.js  manifest.webmanifest
apps/party/parties/: README.md  assembly95.json  assembly96.json  classics.json  gathering96.json  gathering97.json
apps/tracker/: CLAUDE.md  MODULES-PLAYBOOK.md
apps/tracker/backend/: .env.example  Cargo.toml  bacon.toml
apps/tracker/backend/src/: auth.rs  config.rs  db.rs  enrich.rs  lib.rs  manifest.rs  migrate.rs  modland.rs  routes.rs  scan.rs  state.rs
apps/tracker/e2e/: Cargo.toml
apps/tracker/e2e/src/: lib.rs
apps/tracker/e2e/tests/: playlists.rs
apps/tracker/frontend/: eslint.config.js  package.json  playwright.config.ts  svelte.config.js  vite.config.ts
apps/tracker/frontend/e2e/: editor.spec.ts  facets.spec.ts  jamming.spec.ts  library-rows.spec.ts  overlays.spec.ts  playback.spec.ts  player-view.spec.ts  prefetch.spec.ts  reload-restore.spec.ts  reveal-current.spec.ts  tunnel-shader.spec.ts  type-to-filter.spec.ts  url-state.spec.ts
apps/tracker/frontend/scripts/: gen-icons.sh
apps/tracker/frontend/src/: app.html
apps/tracker/frontend/src/lib/: AddToPlaylist.svelte  AlphabetRail.svelte  CurateModal.svelte  DupesPanel.svelte  FacetBar.svelte  LibraryList.svelte  Modal.svelte  PatternViewScroll.svelte  PlayerView.svelte  PlaylistsPanel.svelte  PlaylistsTab.svelte  SettingsPanel.svelte  StandaloneIntake.svelte  Toasts.svelte  api.ts  enrich-machine.ts  enrich.ts  library-view.svelte.ts  library.svelte.ts  library.ts  manifest.svelte.ts  manifest.ts  player-host.ts  player-view.svelte.ts  scan-machine.ts  settings.svelte.ts  standalone.ts  url-state.ts  view.svelte.ts
apps/tracker/frontend/src/lib/__tests__/: Toasts.svelte.test.ts  api.test.ts  enrich-machine.test.ts  (+5 more)
apps/tracker/frontend/src/routes/: +layout.svelte  +page.svelte
apps/tracker/frontend/static/: manifest.webmanifest
apps/tracker/integration/: Cargo.toml
apps/tracker/integration/src/: lib.rs
apps/tracker/integration/tests/: api.rs  manifest.rs  playlists.rs
data/: .gitignore  amiga_legends.playlist.json  build_ma_playlist.py  build_playlist.py  chip_legends.playlist.json  demoscene_favourites.playlist.json  enrich_ma_artists.py  favourites_by_coma.playlist.json  modarchive_top_favourites.playlist.json  model.glb
emulators/puae-wasm/: INTEGRATION.md  JIT-FINDINGS.md  README.md
emulators/puae-wasm/bench/: .gitignore  README.md  capture.mjs  index.html  measure.mjs  scan.mjs  server.mjs
emulators/puae-wasm/bench-jit/: .gitignore  README.md  bench.mjs  build.sh  interp.c
emulators/puae-wasm/core/: .gitignore  Containerfile  README.md  build-core.sh
emulators/puae-wasm/core/ejs-jit/: .gitignore  bundle-test.mjs  bundle.mjs  gate-repro.mjs  install-src.js
emulators/puae-wasm/core/patches/: incremental.sed  m0-jit-hook.py  m1-jit-scaffold.py  m1-makefile.py  m3-jit-scaffold.py  m4-postjs.py
emulators/puae-wasm/jit/: README.md  bench.mjs  cftest.mjs  coreblock.mjs  coreblocktest.mjs  coretarget.mjs  coretest.mjs  decode.mjs  difftest.mjs  interp.mjs  layout.mjs  recompile.mjs  run.mjs
emulators/puae-wasm/jit-runtime/: README.md  batch.mjs  drive.mjs  harness.html  musashi-difftest-mem.mjs  musashi-difftest-term.mjs  musashi-difftest.mjs  musashi-oracle.md  render-check.mjs  runtime.mjs  server.mjs  throughput.mjs
emulators/puae-wasm/phase1-abi/: .gitignore  README.md  build.sh  core.c  test.mjs
emulators/puae-wasm/spike/: README.md  emit.mjs  spike.mjs
services/transcoder/: .env.example  Cargo.toml  pyproject.toml
services/transcoder/src/: main.rs
services/transcoder/src/transcoder/: __main__.py  main.py
wasm/libopenmpt-ext/: .gitignore  Containerfile  README.md  build.sh  compile.sh  exports.txt  runtime.txt
wasm/libopenmpt-ext/patches/: patch.py
wasm/libopenmpt-ext/spike/: spike.mjs
wasm/libopenmpt-ext/src/: shim.cpp
(+4 files in other folders)
