# One Rust workspace for every backend/service crate in the monorepo. Crates
# share this [workspace.dependencies] table, one Cargo.lock, and one target/.
[workspace]
resolver = "2"
members = [
    "apps/tracker/backend",
    "apps/tracker/e2e",
    "apps/party/backend",
    "services/transcoder",
]

[workspace.package]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
axum = { version = "0.8", features = ["macros", "tokio", "tracing"] }
rusqlite = { version = "0.40", features = ["bundled"] }
walkdir = "2"
# Parallel per-file I/O in the scanner (stat/hash/sniff) to hide NAS latency.
rayon = "1"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.7", features = ["trace", "fs", "set-header"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Order-preserving map: a party config's `categories` keeps its JSON key order,
# which drives the compo display order in the SPA.
indexmap = { version = "2", features = ["serde"] }
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
mime_guess = "2"
sha2 = "0.11"
# Standalone MD5 (not RustCrypto md-5) — has a streaming Context and no `digest`
# trait dep, so it won't clash with sha2 0.11's digest 0.11. Used to match The
# Mod Archive, which identifies modules by MD5 of file bytes.
md5 = "0.7"
base64 = "0.22"
hex = "0.4"
dotenvy = "0.15"
# Union of the two apps' feature sets: cookies (tracker) + stream (party).
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "cookies", "stream"] }
zip = { version = "8", default-features = false, features = ["deflate"] }
tempfile = "3"
