[package]
name = "scene-transcoder"
version.workspace = true
edition.workspace = true

[[bin]]
name = "scene-transcoder"
path = "src/main.rs"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tempfile = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dotenvy = { workspace = true }
