[project]
name = "party-transcoder"
version = "0.1.0"
description = "Stateless media transcoder sidecar (ImageMagick + ffmpeg) for the party app"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.136.3",
  # Plain uvicorn (not [standard]): a loopback, low-QPS sidecar doesn't need
  # uvloop/httptools/websockets/watchfiles. Falls back to asyncio + h11.
  "uvicorn>=0.49.0",
  "python-dotenv>=1.2.2",
]

[project.scripts]
party-transcoder = "transcoder.__main__:main"

[dependency-groups]
dev = ["ruff>=0.15.16"]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/transcoder"]
