[package]
name = "party-backend"
version.workspace = true
edition.workspace = true

[[bin]]
name = "party-backend"
path = "src/main.rs"

[lib]
name = "party_backend"
path = "src/lib.rs"

[dependencies]
axum = { workspace = true }
rusqlite = { workspace = true }
walkdir = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
mime_guess = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
dotenvy = { workspace = true }
reqwest = { workspace = true }
zip = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
