[package]
name = "tracker-backend"
version.workspace = true
edition.workspace = true

[[bin]]
name = "tracker-backend"
path = "src/main.rs"

# Offline migration planner: TSV snapshot → seeded library.json + dupe/alias
# reports. Read-only over the collection.
[[bin]]
name = "tracker-migrate"
path = "src/bin/migrate.rs"

[lib]
name = "tracker_backend"
path = "src/lib.rs"

[dependencies]
axum = { workspace = true }
rusqlite = { workspace = true }
walkdir = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
# Order-preserving map for the library.json manifest — keeps human-edited key
# order stable across save round-trips.
indexmap = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
mime_guess = { workspace = true }
sha2 = { workspace = true }
md5 = { workspace = true }
rayon = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
dotenvy = { workspace = true }
# Modland client: download a playlist's missing modules by path.
reqwest = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
